# Gloryson-Ondanje

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Evaluations/: Gloryson-Ondanje ASSESSMENT.md  Gloryson-Ondanje EVALS.md
data/processed/: chunks.json  parsed_elements.json
data/processed/chroma_db/: bm25_index.pkl
scripts/: build_index.py  evaluate_system.py  process_manual.py  test_retrieval.py
src/: config.py
src/api/: models.py  routes.py
src/generation/: answer_generator.py
src/indexing/: embedder.py  index_builder.py
src/ingestion/: chunker.py  contextualizer.py  pdf_parser.py
src/retrieval/: hybrid_search.py  page_aggregator.py  reranker.py
